fixed alignment issues in header row table

--- a/src/components/BettingWidget/ComplexBettingWidget2/ComplexBettingWidget2.less
+++ b/src/components/BettingWidget/ComplexBettingWidget2/ComplexBettingWidget2.less
@@ -257,6 +257,11 @@ div.complex-betting {
    .rt-thead.-headerGroups{
       background: transparent;
       border-bottom:0 none;
+      .rt-tr{
+        .rt-th:nth-child(2){
+          width:142px !important;
+        }
+      }
     }
   }
   .icon-bitcoin{
